--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@ prive/
 squelettes-dist/
 config/
 INSTALL.txt
+
+bdd/proverbdb.sql.zip
+
+.project
+
+.settings/.jsdtscope
+
+.buildpath
+
+.settings/org.eclipse.php.core.prefs
+
+.settings/org.eclipse.wst.common.project.facet.core.xml
+
+.settings/org.eclipse.wst.jsdt.ui.superType.container
+
+.settings/org.eclipse.wst.jsdt.ui.superType.name
